# GarbageMan

./: .dockerignore  .gitignore  LICENSE  docker-compose.yml  main.py  pyproject.toml  readme.md
brain/: Dockerfile  main.py  pyproject.toml  rag_client.py  requirements-min.txt  requirements.txt
brain/ui/: index.html  web_server.py
brain/ui/static/: app.js  style.css
rag_service/: Dockerfile  README.md  main.py  pyproject.toml  scraper.py
tools/: Dockerfile  pyproject.toml  requirements.txt  server.py
